# 006-Refactoring

./: .gitignore  CMakeLists.txt  README.md  chess.files  monolopy.cpp  monolopy.hpp  test.cpp
include/: Bishop.hpp  BishopFigure.hpp  ChessFigure.hpp  ChessFigureTypes.hpp  FigureType.hpp  King.hpp  KingFigure.hpp  Knight.hpp  KnightFigure.hpp  Pawn.hpp  PawnFigure.hpp  Queen.hpp  QueenFigure.hpp  Rook.hpp  RookFigure.hpp  TictacToe.hpp  Utils.hpp  auto.hpp  auto_field.h  bank.hpp  bank_field.h  bishop.hpp  board.h  cloth_field.h  clothes.hpp  console_input_output.hpp  constants.hpp  controller.hpp  field.h  field.hpp  field_auto.hpp  field_bank.hpp  field_clother.hpp  field_food.hpp  field_prison.hpp  field_travel.hpp  figureCommon.hpp  food.hpp  food_field.h  game.hpp  (+20 more)
src/: .monopoly.cpp.swp  Bishop.cpp  BishopFigure.cpp  CMakeLists.txt  ChessFigure.cpp  King.cpp  KingFigure.cpp  Knight.cpp  KnightFigure.cpp  Pawn.cpp  PawnFigure.cpp  Queen.cpp  QueenFigure.cpp  Rook.cpp  RookFigure.cpp  Utils.cpp  auto.cpp  auto_field.cpp  bank.cpp  bank_field.cpp  bishop.cpp  board.cpp  cloth_field.cpp  clothes.cpp  console_input_output.cpp  controller.cpp  field.cpp  field_auto.cpp  field_bank.cpp  field_clother.cpp  field_food.cpp  field_prison.cpp  field_travel.cpp  figureCommon.cpp  food.cpp  food_field.cpp  game.cpp  king.cpp  knight.cpp  main.cpp  (+18 more)
test/: CMakeLists.txt
test/main_tests/: CMakeLists.txt  StringCalcTest.cpp  StringCalcTest.h  test.cpp
