find_package(Threads REQUIRED)

find_package(GTest)
if(GTest_FOUND)
    find_library(GMOCK_LIBRARY gmock REQUIRED HINTS "${CMAKE_INSTALL_PREFIX}")
    if(NOT ${GMOCK_LIBRARY} STREQUAL "GMOCK_LIBRARY-NOTFOUND")
        add_library(GTest::GMock UNKNOWN IMPORTED)
        set_target_properties(GTest::GMock PROPERTIES IMPORTED_LOCATION ${GMOCK_LIBRARY})
        message("Google test/mock found at ${GMOCK_LIBRARY}.")
        set(HAVE_GTEST ON)
    else()
        message(WARNING "Google test/mock not found.")
    endif()
else()
    message(WARNING "Google test not found.")
endif()

add_subdirectory(main_tests)
